Update for Benjamin's new comments on single top.
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@273 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/doc.bib
+++ b/doc/doc.bib
@@ -664,6 +664,26 @@
       url           = "http://cds.cern.ch/record/1668115/",
 }
 
+
+@article{Khachatryan:2014uma,
+      author         = "Khachatryan, V. and others",
+      title          = "{Search for Monotop Signatures in Proton-Proton
+                        Collisions at $\sqrt s =$ 8 TeV}",
+      collaboration  = "CMS",
+      journal        = "Phys.Rev.Lett.",
+      number         = "10",
+      volume         = "114",
+      pages          = "101801",
+      doi            = "10.1103/PhysRevLett.114.101801",
+      year           = "2015",
+      eprint         = "1410.1149",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "CMS-B2G-12-022, CERN-PH-EP-2014-225",
+      SLACcitation   = "%%CITATION = ARXIV:1410.1149;%%",
+  }
+
+
 @article{ATLASmonotop,
       title          = "{Search for a single-top quark produced in association with missing energy in proton-proton collisions at $\sqrt{s}=\mathrm{8~TeV}$  with the ATLAS detector}",
       collaboration  = "ATLAS Collaboration",
