--- a/doc/tex/SingleTop.tex
+++ b/doc/tex/SingleTop.tex
@@ -88,7 +88,7 @@ first or second generation and the invisible $V$ boson (see the diagrams of
   }
 \caption
 {
-Feynman diagram of leading order processes leading to monotop events: production of
+Feynman diagrams of leading order processes leading to monotop events: production of
 a coloured scalar resonance $\varphi$ decaying into a top quark and a spin-$1/2$ fermion $\chiDM$ (a),
 $s-$ (b) and \tchannel (c) non resonant production of a top quark in association with
 a spin-1 boson $V$ decaying invisibly.
@@ -130,7 +130,7 @@ In this case, a colored $2/3$-charged scalar ($\varphi$) is produced and decays 
 %+ X_\mu \bar u \gmu
 %\Big[a^{1/2}_{VR} + b^{1/2}_{VR} \gamma_5 \Big] \chiDM 
 + 
-{\rm h.c.} \bigg] 
+{\rm h.c.} \bigg] ,
 \esp\ee
 %\begin{eqnarray}
 %\label{eq:lagrangianResonant}
@@ -154,21 +154,12 @@ embedded into the $3\times 3$ antisymmetric matrices
 $a^q_{SR}$ (scalar couplings) and $b^q_{SR}$ (pseudoscalar couplings)
 while those to the new fermion $\chiDM$ and one
 single up-type quark are given by the three-component vectors
-$a^{1/2}_{\{S\}R}$ and $b^{1/2}_{\{S\}R}$
+$a^{1/2}_{S R}$ and $b^{1/2}_{S R}$
 in flavor space. 
 
 % 
 % \com{Question/comment: in this resonant model, this is not so obvious to interpret $\phi_{\pm}$ as the new particle since there is a vertex $\phi-u-\chiDM$.
 % It is somehow breaking the concept of having a dark sector weakly coupled to ordinary matter via a new particle.}
-
-  Under the form of Eq.~\eqref{eq:lagrangianResonant}, the Lagrangian corresponds to the one
-  introduced in the original monotop search proposal~\cite{AndreaFuksMaltoni} and has been
-  used by the CMS for Run I analyses after neglecting the pseudoscalar component
-  of the coupling and adding the vector resonance case for which minimality
-  requirements are difficult to accomodate~\cite{CMSmonotop}. In contrast, the
-  study of  Ref.~\cite{Boucheneb:2014wza} has imposed electroweak gauge invariance and
-  requires minimality, which enforces all new couplings to be right-handed,
-
 
 
 
@@ -176,7 +167,7 @@ Under the form of Eq.~\eqref{eq:lagrangianResonant}, the Lagrangian is the one
 introduced in the original monotop search proposal~\cite{AndreaFuksMaltoni}. It has been
 used by the CMS collaboration for Run I analyses after neglecting all pseudoscalar components
 of the couplings and adding the vector resonance case for which minimality
-requirements are difficult to accommodate~\cite{CMSmonotop}. In contrast, the
+requirements are difficult to accommodate~\cite{Khachatryan:2014uma}. In contrast, the
 study of Ref.~\cite{Boucheneb:2014wza} has imposed electroweak gauge invariance and
 required minimality. This enforces all new couplings to be right-handed so that
 \begin{equation}
@@ -184,7 +175,7 @@ a^{1/2}_{SR} = b^{1/2}_{SR} = \frac12 y_s^*
 \qquad\text{and}\qquad
 a^q_{SR} = b^q_{SR} = \frac12 \lambda_s \ ,
 \end{equation}
-where the objects $\lambda_s$ and $y_s$ are
+where the objects $y_s$ and $\lambda_s$ are
 a tridimensional vector and a $3\times 3$ matrix
 in flavor space respectively. 
 This class of scenarios is the one that has been adopted by the ATLAS collaboration for its
@@ -209,7 +200,7 @@ For non-resonant monotop production, the monotop state is produced via
 flavor-changing neutral interactions of the top quark, a lighter up-type
 quark and a new invisible vector particle $V$. 
 This is the only case considered, as having a new scalar 
-would involve a mixing with the SM Higgs boson and therefore a larger number of free parameters. 
+would involve in particular a mixing with the SM Higgs boson and therefore a larger number of free parameters. 
 The Lagrangian describing the
 dynamics of this non-resonant monotop production case is:
 %%CD: Full explanation is below
@@ -245,8 +236,8 @@ where the flavor and color indices are
 again understood for clarity.
 
 The strength of the interactions among these two states and a pair
-of up-type quarks is modeled via two $3\times 3$ matrices in flavor space $a^{\{1\}}_{FC}$ for the vector couplings
-and $b^{\{1\}}_{FC}$ for the axial vector couplings.
+of up-type quarks is modeled via two $3\times 3$ matrices in flavor space $a^{1}_{FC}$ for the vector couplings
+and $b^{1}_{FC}$ for the axial vector couplings.
 
 %The dynamics of this case is described by the following Lagrangian:
 %\begin{equation}
@@ -264,7 +255,7 @@ and $b^{\{1\}}_{FC}$ for the axial vector couplings.
 
 As for the resonant case, the Lagrangian of Eq.~\eqref{eq:lagrangianNonResonantVector} is the one that
 has been used by CMS after reintroducing the scalar option for the invisible
-state and neglecting all pseudoscalar interactions~\cite{CMSmonotop}. as
+state and neglecting all pseudoscalar interactions~\cite{CMSmonotop}. As
 already mentioned, a simplified setup motivated by gauge invariance and
 minimality has been preferred so that, as shown in Ref.~\cite{Boucheneb:2014wza}, we
 impose all interactions to involve right-handed quarks only in order to simplify the model phenomenology,
@@ -272,12 +263,14 @@ impose all interactions to involve right-handed quarks only in order to simplify
 a^1_{FC} = b^1_{FC} = \frac12 a_R
 \end{equation}
 where $a_R$ denotes a $3\times 3$ matrix in flavor space.
+This implies the vector field to be an $SU(2)_L$
+singlet.
 
 \newthought{Model parameters and assumptions}
  
 The models considered as benchmarks for the first LHC searches
-contain further assumptions in terms of the flavor and chiral structure of the model
-with respect to the full Lagrangians of equations~\eqref{eq:lagrangianResonant} and~\eqref{eq:lagrangianNonResonantVector}.
+contain further assumptions in terms of the flavor structure of the model
+with respect to the Lagrangians of the previous subsection.
 
 %We only consider right-handed quark components, in order to simplify the model phenomenology. 
 %The representation of the left-handed components under the $\SUtwo$ symmetry would lead to a 
@@ -289,8 +282,6 @@ with respect to the full Lagrangians of equations~\eqref{eq:lagrangianResonant} 
 %$V \to b\bar{d} + \bar{b}d$ decay mode in addition to the invisible decay mode. 
 %This in turn sets the scalar (vector) and pseudoscalar (axial vector) matrices to have 
 %elements of equal values. 
-This implies the vector to be an SU(2)L singlet, hence in turn setting the vector and axial vector matrices 
-to have elements of equal values. 
 
 %Furthermore, in order to be visible at the LHC in the monotop final state, 
 %these models must include a strong coupling between the new particle $\phi$ and $t\chiDM$.
@@ -368,6 +359,7 @@ all other elements of the matrices and vectors above being set to zero.
 % \label{sec:chiralstructure}
 
 \newthought{Implementation}
+
 The Monte Carlo simulation relevant for
 this case is discussed in Appendix~\ref{app:MonojetLikeModels_Appendix}.
 
@@ -384,24 +376,17 @@ this case is discussed in Appendix~\ref{app:MonojetLikeModels_Appendix}.
 
 \subsection{Parameter scan}
 
-The relevant parameters for the resonant model are:
-\begin{itemize}
-	\item The mass of the new scalar $\phi$;
-	\item The mass of the new fermion $\chiDM$;
-	\item The coupling of the new scalar to the new fermion and top quark $a$, 
-	related to the width of the scalar in the minimal width assumption;
-\end{itemize}	
+Under all the assumptions of the previous sections, the parameter space of
+the resonant model is defined by four quantities, namely the mass of the
+new scalar field $\varphi$, the mass of the invisible fermion $\chi$ and
+the strengths of the interactions of the scalar resonance with the monotop
+system $y$ and with down-type quarks $\lambda$. One of both coupling
+parameters could however be traded with the width of the resonance.
 
-The relevant parameters for the non-resonant model are:
-\begin{itemize}
-	\item The mass of the new vector $V$;
-	%\item The mass of the new fermion $\chiDM$;
-	\item The coupling of the new vector to the up and top quark $a$, 
-	related to the width of the scalar in the minimal width assumption;
-	\item The coupling of the new vector to the new fermion $\chiDM$, 
-	related to the branching fraction of the vector into invisible and visible particle,
-	and as a consequence to the width of the vector. 
-\end{itemize}	
+The parameter space of the non-resonant model is defined by two
+parameters, namely the mass of the invisible state $V$ and its
+flavour-changing neutral coupling to the up-type quarks $a_R$.
+      
 %
 %In the case of the non-resonant model, the current implementation
 %of the model does not allow changing the new fermion mass directly 
@@ -409,25 +394,42 @@ The relevant parameters for the non-resonant model are:
 
 In the case of the non-resonant model, the invisible vector is connected to
 a hidden sector that could be, in its simplest form, parameterized by a new
-fermion. This has effects on the width of the invisible $V$ state.
+fermion~\cite{Boucheneb:2014wza}. This has effects on the width of the invisible $V$ state.
 
-It has been checked for the non-resonant model that the relevant kinematics 
-does not change when changing 
-the width of the resonance, for widths up to 10\% of the $V$ mass. 
-Figures~\ref{fig:appB:Vmass} and \ref{fig:appB:pTV} show 
-the $V$ mass distribution, the transverse momentum for $V$ 
-%and for the top quark 
-in the case of the $V\to t\bar{u}$ decay, for different $V$ masses and widths.
-Since they only show kinematic quantities related to $V$, these figures are relevant independently of the $V$ decay mode (be it visible or invisible). 
+
+A consensus between the ATLAS and CMS collaborations has been reached in
+the case of non-resonant monotop production. The results have been
+described above. In contrast, discussions in the context of resonant
+monotop production are still on-going. The related parameter space
+contains four parameters and must thus be further simplified for practical
+purposes. Several options are possible and a choice necessitates additional
+studies that will be achieved in a near future.
+
+
+
+It has been verified that the kinematics do not depend on the width of the
+invisible state in the case where this width is at most 10\% of the
+$V$-mass. This is illustrated in Figures~\ref{fig:appB:Vmass} and \ref{fig:appB:pTV},
+where we respectively show the invariant-mass and transverse-momentum
+spectra of the $V$-boson when it decays into a top-up final state and for
+different $V$-boson masses. The results are however independent of the
+visible or invisible decay modes as we are only concerned with the
+kinematical properties of the invisible state.
+
+
 \Todo{Pictures will be improved in the next drafts.}
 \begin{figure}[!h!tpd]
 	\centering
 	\includegraphics[width=1.0\textwidth]{figures/singletop/m_Vmets}
 	\caption{
-		Distribution of $V$ invariant mass for the $gu\to tV(\to t\bar{u})$ (on-shell V) 
-		for $m_V$ = {200, 600, 1000}~GeV (from left to right) and for three different
-		visible decay width (computed from \madgraph directly according to the allowed decays and their couplings, $1\%$ and $10\%$).
-	}   
+Distributions of the invariant mass of the $V$ boson in the case of
+the process $p p \to tV \to t (t\bar u + {\rm c.c.})$. We have imposed
+that the $V$-boson is produced on-shell and have chosen its mass to be
+$m_V = 200$, 600 and 1000~GeV (left, central and right panels).
+Moreover, we have considered three possible cases for the total width
+of the $V$-boson, which has been fixed to 0.61\%, 0.1\% and 10\% of the
+mass.
+}   
 	\label{fig:appB:Vmass}
 \end{figure}
 
@@ -436,8 +438,8 @@ Since they only show kinematic quantities related to $V$, these figures are rele
 	\centering
 	\includegraphics[width=1.0\textwidth]{figures/singletop/Vmets_pt}
 	\caption{
-		Distribution of the $V$ $p_T$ for the $gu\to tV(\to t\bar{u})$ (on-shell V) for $m_V$ = {200, 600, 1000}~GeV (from left to right) and for three different
-		visible decay width (computed from \madgraph directly, $1\%$ and $10\%$).
+Same as Figure~\ref{fig:appB:Vmass} in the case of the transverse-momentum
+distribution of the $V$-boson.
 	}
 	\label{fig:appB:pTV}
 \end{figure}
@@ -453,11 +455,7 @@ Since they only show kinematic quantities related to $V$, these figures are rele
 %	\label{fig:appB:pTtop}
 %\end{figure}
 
-The limited timescale allowed to reach a consensus for
-the recommendations contained in this document has not allowed further studies on the 
-parameter scan of these models. The two Collaborations have however agreed to continue studying
-these models and agree on a common parameter scan,
-following the same path as for other models described in this document.  
+
 
 \subsection{Single Top Models}
 
