Fix for one of the comments from Tom Rizzo.
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@274 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/tex/MonojetLikeModels.tex
+++ b/doc/tex/MonojetLikeModels.tex
@@ -540,7 +540,7 @@ where $x=3$ for scalars and $x=1$ for pseudoscalars. The loop integrals are
   \right) \, 
   \eea
 \end{fullwidth}
- where $\tau = 4 m_{t}^2/m_{\phi,a}^2$, and, for $\tau > 1$, 
+for $\tau < 1$, where $\tau = 4 m_{t}^2/m_{\phi,a}^2$, and, for $\tau > 1$, 
 \begin{fullwidth}
   \bea \label{eq:fphifb}
   f_\phi (\tau) &=& \tau \left [ 1+ (1-\tau)\left(-\frac{1}{4}\left(\log\frac{1+\sqrt{1-\tau}}{1-\sqrt{1-\tau}}+i\pi\right)^2\right) \right ]  \,\,,\\
