Added some more contributors
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@276 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/contributors/contributors.tex
+++ b/doc/contributors/contributors.tex
@@ -24,10 +24,12 @@
 \href{mailto:caterina.doglioni@cern.ch}{Caterina Doglioni}
 \href{mailto:Tristan.DuPree@cern.ch}{Tristan DuPree}
 \href{mailto:Johannes.Erdmann@cern.ch}{Johannes Erdmann}
+\href{mailto:cfischer@ifae.es}{Cora Fischer}
 \href{mailto:pjfox@fnal.gov}{Patrick Fox}
 \href{mailto:Benjamin.Fuks@cern.ch}{Benjamin Fuks}
 \href{mailto:genest@lpsc.in2p3.fr}{Marie-Helene Genest}
 \href{mailto:Bhawna.Gomber@cern.ch}{Bhawna Gomber}
+\href{mailto:arely.cortes.gonzalez@cern.ch}{Arely Cortes Gonzales}
 \href{mailto:barbara.alvarez.gonzalez@cern.ch}{Barbara Alvarez Gonzalez}
 \href{mailto:johanna.gramling@cern.ch}{Johanna Gramling}
 \href{mailto:michele.degruttola@cern.ch}{Michele De Gruttola}
@@ -55,6 +57,7 @@
 \href{mailto:romain.madar@cern.ch}{Romain Madar}
 \href{mailto:sarah.malik@cern.ch}{Sarah Malik}
 \href{mailto:Fabio.Maltoni@cern.ch}{Fabio Maltoni}
+\href{mailto:o.p.c.mattelaer@durham.ac.uk}{Olivier Mattelaer}
 \href{mailto:kentarou.mawatari@vub.ac.be}{Kentarou Mawatari}
 \href{mailto:c.mccabe@uva.nl}{Christopher McCabe}
 \href{mailto:megy@clermont.in2p3.fr}{Theo Jean Megy}
@@ -67,6 +70,7 @@
 \href{mailto:Priscilla.Pani@cern.ch}{Priscilla Pani}
 \href{mailto:mpapucci@lbl.gov}{Michele Papucci}
 \href{mailto:Bjoern.Penning@cern.ch}{Bjorn Penning}
+\href{mailto:mmp@ifae.es}{Mario Martinez Perez}
 \href{mailto:mpeskin@slac.stanford.edu}{Michael Peskin}
 \href{mailto:Arturo.Rodolfo.Sanchez.Pineda@cern.ch}{Arturos Sanchez Pineda}
 \href{mailto:Deborah.Pinna@cern.ch}{Deborah Pinna}
