--- a/doc/tex/Conclusions.tex
+++ b/doc/tex/Conclusions.tex
@@ -5,7 +5,7 @@
 {$LastChangedBy: doglioni $}
 \svnid{$Id: $}
 
-Points to be made in a conclusion:
+Points to be made in a conclusion\Todo{write the conclusion}:
 \begin{itemize}
 
 \item In the case of s-channel simplified models, in particular, there is complementarity between searches for dark matter and visible particles.   Thus, limits on invisible decays must be consistent with dijet and dilepton searches.  In the case of the mono-top simplified model, limits on visible single-top final states must be considered.
