--- a/doc/tex/EWSpecificModels_EFT.tex
+++ b/doc/tex/EWSpecificModels_EFT.tex
@@ -50,6 +50,7 @@ such as the one depicted in Figure~\ref{fig:modelMonoHEFT}.
 \begin{figure}[!htb]
 	\centering
 	\unitlength=0.005\textwidth
+    \vspace{3\baselineskip}
 	\begin{feynmandiagram}[modelMonoHEFT]
 		\fmfleft{i1,i2}
 		\fmfright{o1,o2,ohidden,o3}
@@ -65,6 +66,7 @@ such as the one depicted in Figure~\ref{fig:modelMonoHEFT}.
 		\fmflabel{\Large ${\chiDM}$}{o2}
 		\fmfdot{v1}
 	\end{feynmandiagram}
+    \vspace{3\baselineskip}
 	\caption{Diagram for EFT operators giving rise to a Higgs+\MET signature.}
 	\label{fig:modelMonoHEFT}
 \end{figure}
@@ -368,7 +370,7 @@ Contact interaction operators like the ones in this section
 remain useful tools for comparison of the sensitivity of different search channels, 
 and for reinterpretation of other models under the correct assumptions. 
 To date, there are no UV-complete models available for most of those operators:
-dimension-7 operators are particularly challenging since their completion involves loops~\footnote{
+dimension-7 operators are particularly challenging since their completion involves loops~\sidenote{
 An example case for the need of loop completions is a simplified model with an additional scalar exchanged at tree level.
 The scalar couples to $WW$ and $ZZ$ in a gauge-invariant way, Integrating out the mediator 
 does not lead to the Lorentz structure of a dimension-7 operator, so it is not possible
@@ -393,3 +395,4 @@ of the invalid events using the procedure in Section~\ref{sec:EFTValidity} along
 \end{itemize}
 
 \newthought{Model implementation discussed in Appendix~\ref{}}
+\Todo{fix!}
