--- a/doc/tex/TChannelModels.tex
+++ b/doc/tex/TChannelModels.tex
@@ -113,6 +113,7 @@ DM searches should also directly test their sensitivity to the MSSM benchmark mo
 
 \begin{figure}
   \unitlength=0.0043\linewidth
+  \vspace{3\baselineskip}
   \begin{feynmandiagram}[modelTmonojetA]
     \fmfleft{i1,i2}
     \fmfright{o1,o2}
