Added more contributors
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@278 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/contributors/contributors.tex
+++ b/doc/contributors/contributors.tex
@@ -69,6 +69,7 @@
 \href{mailto:klaas.ole.padeken@cern.ch}{Klaas Ole Padeken}
 \href{mailto:Priscilla.Pani@cern.ch}{Priscilla Pani}
 \href{mailto:mpapucci@lbl.gov}{Michele Papucci}
+\href{mailto:Jacopo.Pazzini@pd.infn.it}{Jacopo Pazzini}
 \href{mailto:Bjoern.Penning@cern.ch}{Bjorn Penning}
 \href{mailto:mmp@ifae.es}{Mario Martinez Perez}
 \href{mailto:mpeskin@slac.stanford.edu}{Michael Peskin}
@@ -106,6 +107,7 @@
 \href{mailto:Hongtao.Yang@cern.ch}{Hongtao Yang}
 \href{mailto:Yong.Yang@cern.ch}{Yong Yang}
 \href{mailto:Shin-Shan.Yu@cern.ch}{Shin-Shan Yu}
-\href{mailto:Marco.Zanetti@cern.ch}{Marco Zanetti}
+\href{mailto:marco.zanetti@cern.ch}{Marco Zanetti}
 \href{mailto:zhangzq@lal.in2p3.fr}{Zhiqing Philippe Zhang}
+\href{mailto:a.zucchetta@cern.ch}{Alberto Zucchetta}
 \href{mailto:kzurek@berkeley.edu}{Kathryn Zurek}
